static/style/master.css
@import url('https://fonts.googleapis.com/css2?family=Tajawal&display=swap');

:root {
	--main-color: #4150ff;

	--main-background-color: white;
	--secondary-background-color: #f5f5f5;

	
	--primary-border-color: #cfcfcf;
	--secondary-border-color: #f0f0f0;
	
	--primary-text-color: black;
	--secondary-text-color: #799197;

	--anchor-text-color: #00a6ff;
}

* {
	padding: 0;
	margin: 0;
	font-family: 'Tajawal', sans-serif;
	direction: rtl;
}
.container {
	width: 900px;
	margin: 0 auto;
}
a {
	color: var(--anchor-text-color);
	text-decoration: none;
}
a:hover {
	text-decoration: underline;
	cursor: pointer;
}
footer {
	text-align: center;
	padding: 40px 0 10px 0;
	color: var(--secondary-text-color);
}
footer h1 {
	font-size: 30px;
}
footer div#links {
	display: flex;
	justify-content: center;
	margin: 10px 0;
}
footer div#links ul {
	margin: 0 50px;
	text-align: right;
}
footer div#links ul li {
	font-size: 15px;
	margin: 5px 0;
}
footer div#links ul li a {
	color: var(--secondary-text-color);
}
footer div#social a {
	color: var(--secondary-text-color);
	font-size: 40px;
	margin: 0 20px;
}
footer p {
	direction: ltr;
	font-size: 15px;
	margin-top: 30px;
}
@media (max-width: 1000px) {
	.container {
		width: 90%;
	}
}

